main page almost finished

--- a/src/pages/header/header.sass
+++ b/src/pages/header/header.sass
@@ -1,45 +1,61 @@
-header
-    background-color: #120961d0
-    width: 100%
-    height: 60px
-    display: flex
-    justify-content: flex-start
-    align-items: center
-    padding: 10px
-    .logo
+.navbar
+    &-nav
+        font-weight: 400
+    &-brand
         display: flex
+        justify-content: center
         align-items: center
-        margin: 0 50px
-        float: left
-        height: 40px
-        text-decoration: none
         transition: all 0.4s ease-in-out
         &:hover
-            text-shadow: 0 0 20px #ffffff63
-        img 
-            height: 100%
-        &_text
-            margin-left: 5px
-            text-transform: uppercase
-            color: #ffffff91
-            font-size: 20px
-            font-weight: 700
-            text-decoration: none
-    .form-select
-        border: none
-        width: max-content
-        padding: 5px 30px
-        padding-left: 05px
-        option
-            background-color: #120961d0
-            color: #fff
-.header
-    &_link
-        font-weight: 700
-    &_buttons
-        width: 100%
-        display: flex
-        justify-content: flex-start
-        &_link
-            margin: 0 10px
+            text-shadow: 0 0 10px #ffffff63
+        img
+            height: 35px
+            margin-right: 10px
+.form-select
+    padding-right: 30px
+    
+// header
+//     background-color: #120961d0
+//     width: 100%
+//     height: 60px
+//     display: flex
+//     justify-content: flex-start
+//     align-items: center
+//     padding: 10px
+//     .logo
+//         display: flex
+//         align-items: center
+//         margin: 0 50px
+//         float: left
+//         height: 40px
+//         text-decoration: none
+//         transition: all 0.4s ease-in-out
+//         &:hover
+//             text-shadow: 0 0 20px #ffffff63
+//         img 
+//             height: 100%
+//         &_text
+//             margin-left: 5px
+//             text-transform: uppercase
+//             color: #ffffff91
+//             font-size: 20px
+//             font-weight: 700
+//             text-decoration: none
+//     .form-select
+//         border: none
+//         width: max-content
+//         padding: 5px 30px
+//         padding-left: 05px
+//         option
+//             background-color: #120961d0
+//             color: #fff
+// .header
+//     &_link
+//         font-weight: 700
+//     &_buttons
+//         width: 100%
+//         display: flex
+//         justify-content: flex-start
+//         &_link
+//             margin: 0 10px
     
