--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,500;1,700;1,900&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap')
+
+
+::-webkit-scrollbar
+  width: 5px
+::-webkit-scrollbar-track
+  box-shadow: inset 0 0 5px grey
+  border-radius: 5px
+::-webkit-scrollbar-thumb
+  background: #5b5de0
+  border-radius: 5px
+
 body
   margin: 0
   // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
@@ -6,6 +18,5 @@ body
   -moz-osx-font-smoothing: grayscale
   font-family: 'Noto Sans', sans-serif
   background-color: #515ed157
-
 code
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
