--- a/src/pages/footer/footer.sass
+++ b/src/pages/footer/footer.sass
@@ -1,12 +1,30 @@
-footer
-    background-color: #120961d0
-    width: 100%
+=separator
+    content: ''
+    position: absolute
+    background-repeat: repeat-x
+    background-size: 40%
     height: 100px
+    width: 100%
+
+footer
+    position: relative
+    background-image: url(./white_bg.png)
+    background-position: 0% 0%
+    background-repeat: repeat
+    background-size: 20%
+    min-height: 200px
+    padding-top: 80px
+    &:before
+        background: url(./black_separator2.png)
+        background-position-y: top
+        top: 0px
+        +separator
+    width: 100%
+    // height: 100px
     display: flex
     justify-content: center
     align-items: center
-    padding: 10px
 .footer
     &_info
-        color: #fff
-        font-weight: 300
+        color: #000
+        font-weight: 500
