--- a/src/pages/main/main.sass
+++ b/src/pages/main/main.sass
@@ -1,35 +1,22 @@
 section
-    margin: 20px 0
-.main
-    display: flex
-    flex-direction: column
-    align-items: center
-    width: 100%
-    &_cards
-        display: flex
-        flex-direction: row
-        justify-content: center
-        align-items: flex-start
-        width: 100%
-    &_title
-        margin-top: 20px
-        font-weight: 700
-    &_post
-        margin: 0 20px
-        &_head
-            max-height: 35px
-            margin: 0 5px
-            border-radius: 5px
-        &_img
-            height: 300px
-            object-fit: cover
-.countries
-    width: 100%
-    display: flex
-    justify-content: center
-.carousel
-    &-item
-        display: flex!important
-        justify-content: center
-    &-caption
-        text-shadow: 6px 4px 10px rgb(0, 0, 0)
+  margin: 20px 0
+
+
+// .card-header
+//     padding: 0
+//     padding-bottom: 5px
+// .countries
+//     width: 100%
+//     display: flex
+//     justify-content: center
+//     margin: 20px 0
+//     background-color: #212529
+// .carousel
+//     &-inner
+//         height: 100%
+//     &-item
+//         display: flex!important
+//         justify-content: center
+//         height: 100%
+//     &-caption
+//         text-shadow: 6px 4px 10px rgb(0, 0, 0)
