--- a/src/pages/footer/footer.sass
+++ b/src/pages/footer/footer.sass
@@ -8,14 +8,14 @@
 
 footer
     position: relative
-    background-image: url(./white_bg.png)
+    background-image: url(../../img/white_bg.png)
     background-position: 0% 0%
     background-repeat: repeat
     background-size: 20%
     min-height: 200px
     padding-top: 80px
     &:before
-        background: url(./black_separator2.png)
+        background: url(../../img/black_separator2.png)
         background-position-y: top
         top: 0px
         +separator
