--- a/src/pages/main/first/first.sass
+++ b/src/pages/main/first/first.sass
@@ -1,7 +1,7 @@
 @font-face 
     font-family: 'Minecraft'
-    src: url('fonts/Minecraft.eot')
-    src: local('fonts/Minecraft Regular'), local('Minecraft'), url('fonts/Minecraft.eot?#iefix') format('embedded-opentype'), url('fonts/Minecraft.woff2') format('woff2'), url('fonts/Minecraft.woff') format('woff'), url('fonts/Minecraft.ttf') format('truetype'), url('fonts/Minecraft.svg#Minecraft') format('svg')
+    src: url('../../../fonts/Minecraft.eot')
+    src: local('../../../fonts/Minecraft Regular'), local('Minecraft'), url('../../../fonts/Minecraft.eot?#iefix')format('embedded-opentype'),  url('../../../fonts/Minecraft.woff2') format('woff2'), url('../../../fonts/Minecraft.woff') format('woff'), url('../../../fonts/Minecraft.ttf') format('truetype'), url('../../../fonts/Minecraft.svg#Minecraft') format('svg')
     font-weight: normal
     font-style: normal
     font-display: swap
@@ -15,7 +15,7 @@
   width: 100%
 
 .main
-  background: url(./main_bg.png) center center/cover no-repeat
+  background: url(../../../img/main_bg.png) center center/cover no-repeat
   background-attachment: fixed
   height: 900px
   padding-bottom: 200px
@@ -23,7 +23,7 @@
   display: flex
   align-items: center
   &:after
-    background: url(./white_separator.png)
+    background: url(../../../img/white_separator.png)
     background-position-y: bottom
     bottom: 0px
     +separator
