--- a/src/pages/main/benefits/benefits.sass
+++ b/src/pages/main/benefits/benefits.sass
@@ -1,10 +1,9 @@
 .benefits
-  background-image: url(./white_bg.png)
+  background-image: url(../../../img/white_bg.png)
   background-position: 0% 0%
   background-repeat: repeat
   background-size: 20%
   padding: 20px 0
-  // min-height: 700px
   .advice
     display: flex
     justify-content: center
