--- a/src/pages/news/news.sass
+++ b/src/pages/news/news.sass
@@ -1,5 +1,5 @@
 .news
-  background: url(./black_bg.png)
+  background: url(../../img/black_bg.png)
   background-size: 20%
   &_cards
     display: flex
@@ -8,14 +8,21 @@
     align-items: flex-start
     margin: 20px 0
   &_title
-    margin-top: 20px
+    color: #fff
+    text-align: center
+    padding: 20px 0
     font-weight: 700
   &_post
     margin: 0 20px
+    background: #00000075
+    &_title
+      font-weight: 700
     &_head
       max-height: 30px
       margin: 0 5px
       border-radius: 5px
+    &_header
+      padding: 5px 0
     &_img
       height: 100px
       object-fit: cover
