--- a/src/index.sass
+++ b/src/index.sass
@@ -13,10 +13,12 @@
 
 body
   margin: 0
-  // font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   font-family: 'Noto Sans', sans-serif
-  background-color: #515ed157
+  background: url(img/white_bg.png)
+  background-size: 20%
 code
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
+section
+  margin: 20px 0
