--- a/src/pages/main/first/first.sass
+++ b/src/pages/main/first/first.sass
@@ -32,10 +32,16 @@
     font-weight: 300
     text-align: center
     color: rgba(255, 255, 255, 0.8)
-    font-size: 100px
+    font-size: 6vw
     transition: 1s all
     user-select: none
     &:hover
       color: rgba(255, 255, 255, 1)
       filter: drop-shadow(0px 0 10px rgb(255 255 255 / 0.25))
       cursor: default
+    &-above
+      color: #ffffff3a
+      text-align: right
+      width: 80%
+      margin-bottom: 0
+      font-size: 16px
