--- a/src/pages/news/news.sass
+++ b/src/pages/news/news.sass
@@ -1,6 +1,23 @@
+=separator
+  content: ''
+  position: absolute
+  background-repeat: repeat-x
+  background-size: 40%
+  height: 100px
+  width: 100%
 .news
-  background: url(../../img/black_bg.png)
-  background-size: 20%
+  position: relative
+  padding: 150px 0
+  padding-top: 30px
+  background: url(../../img/kola.png)
+  background-size: cover
+  background-repeat: no-repeat
+  background-attachment: fixed
+  &:before
+      background: url(../../img/black_separator.png)
+      background-position-y: bottom
+      bottom: 0px
+      +separator
   &_cards
     display: flex
     flex-direction: row
@@ -8,15 +25,24 @@
     align-items: flex-start
     margin: 20px 0
   &_title
-    color: #fff
-    text-align: center
-    padding: 20px 0
+    text-align: left
     font-weight: 700
+    font-size: 50px
+    transform: rotate(-5deg) translateY(-40px)
+    position: relative
+    z-index: 0
+    color: #ffffff4d
   &_post
     margin: 0 20px
-    background: #00000075
+    padding: 0 50px
+    width: 90%
+    background: -webkit-linear-gradient(#0000008c, #00000091)
+    box-shadow: inset 0px 0px 27px 27px #490e05ad
+    border: none  
     &_title
       font-weight: 700
+      margin-bottom: 21px
+      margin-top: 20px
     &_head
       max-height: 30px
       margin: 0 5px
@@ -26,3 +52,8 @@
     &_img
       height: 100px
       object-fit: cover
+.card-footer
+  border-color: #ffffff5d
+  display: flex
+  flex-direction: column
+  align-items: flex-end
