--- a/src/pages/footer/footer.sass
+++ b/src/pages/footer/footer.sass
@@ -8,19 +8,18 @@
 
 footer
     position: relative
-    background-image: url(../../img/white_bg.png)
+    background-image: url(../../img/white_bg.webp)
     background-position: 0% 0%
     background-repeat: repeat
     background-size: 20%
     min-height: 200px
     padding-top: 80px
     &:before
-        background: url(../../img/black_separator2.png)
+        background: url(../../img/black_separator2.webp)
         background-position-y: top
         top: 0px
         +separator
     width: 100%
-    // height: 100px
     display: flex
     justify-content: center
     align-items: center
