--- a/src/pages/main/admin/admin.sass
+++ b/src/pages/main/admin/admin.sass
@@ -8,13 +8,13 @@
 
 .adminlist
     position: relative
-    background-image: url(../../../img/black_bg.png)
+    background-image: url(../../../img/black_bg.webp)
     background-position: 0% 0%
     background-repeat: repeat
     background-size: 20%
     padding: 20px 0
     &:before
-        background: url(../../../img/black_separator2.png)
+        background: url(../../../img/black_separator2.webp)
         background-position-y: top
         top: 0px
         +separator
@@ -22,7 +22,7 @@
         display: flex
         justify-content: space-around
     .card
-        background: url(../../../img/white_bg.png)
+        background: url(../../../img/white_bg.webp)
         background-size: 500px
         background-repeat: repeat
         &_admins
