--- a/src/pages/main/benefits/benefits.sass
+++ b/src/pages/main/benefits/benefits.sass
@@ -1,5 +1,5 @@
 .benefits
-  background-image: url(../../../img/white_bg.png)
+  background-image: url(../../../img/white_bg.webp)
   background-position: 0% 0%
   background-repeat: repeat
   background-size: 20%
