--- a/src/pages/news/news.sass
+++ b/src/pages/news/news.sass
@@ -9,12 +9,12 @@
   position: relative
   padding: 150px 0
   padding-top: 30px
-  background: url(../../img/kola.png)
+  background: url(../../img/kola.webp)
   background-size: cover
   background-repeat: no-repeat
   background-attachment: fixed
   &:before
-      background: url(../../img/black_separator.png)
+      background: url(../../img/black_separator.webp)
       background-position-y: bottom
       bottom: 0px
       +separator
