--- a/src/index.sass
+++ b/src/index.sass
@@ -16,7 +16,7 @@ body
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   font-family: 'Noto Sans', sans-serif
-  background: url(img/white_bg.png)
+  background: url(img/white_bg.webp)
   background-size: 20%
 code
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
