--- a/src/pages/main/countries/countries.sass
+++ b/src/pages/main/countries/countries.sass
@@ -38,17 +38,17 @@
       &.active
         background: white
   user-select: none
-  background: url(../../../img/third_section_bg.png) center center/cover no-repeat
+  background: url(../../../img/third_section_bg.webp) center center/cover no-repeat
   background-attachment: fixed
   position: relative
   padding: 130px 0
   &:before
-    background: url(../../../img/white_separator2.png)
+    background: url(../../../img/white_separator2.webp)
     background-position-y: top
     top: 0px
     +separator
   &:after
-    background: url(../../../img/black_separator.png)
+    background: url(../../../img/black_separator.webp)
     background-position-y: bottom
     bottom: 0px
     +separator
@@ -56,57 +56,60 @@
   .countries
     height: 700px
     transform-origin: right center
-    .country
-      height: inherit
-      width: inherit
-      position: relative
-      z-index: 1
-      &::after
-        content: ''
-        position: absolute
-        top: 0
-        background: rgba(0, 0, 0, 0.4)
-        height: 100%
-        width: 100%
-        backdrop-filter: blur(2px)
-        border-radius: 2.1rem
-        z-index: -1
-      &_
-        &box
-          height: inherit
-          width: inherit
-        &info
-          margin-right: 20%
-          margin-left: 5%
-        &name
-          font-size: 4vw
-          padding-top: 50px
-          color: white
-        &descr
-          margin-left: .5%
-          margin-top: 5px
-          color: #bbbbbb
-          font-size: 100%
-          line-height: 20px
-        &mayor
-          font-weight: 700
+  .country
+    height: inherit
+    width: inherit
+    position: relative
+    z-index: 1
+    &::after
+      content: ''
+      position: absolute
+      top: 0
+      background: rgba(0, 0, 0, 0.4)
+      height: 100%
+      width: 100%
+      backdrop-filter: blur(2px)
+      border-radius: 2.1rem
+      z-index: -1
+    &_
+      &box
+        height: inherit
+        width: inherit
+      &info
+        margin-right: 20%
+        margin-left: 5%
+      &name
+        font-size: 4vw
+        padding-top: 50px
+        color: white
+      &descr
+        margin-left: .5%
+        margin-top: 5px
+        color: #bbbbbb
+        font-size: 100%
+        line-height: 20px
+      &mayor
+        font-weight: 700
+      &flag
+        max-height: 100px
+        margin-right: 20px
 
-        &skin
-          position: absolute
-          top: 200px
-          right: 0
-          z-index: 0
-          height: 80%
-          img
-            right: -5%
-            margin: 0px auto
-            transform: scale(.85)
-        &pres
-          font-family: 'Minecraft'
-          font-size: 120%
-          background: rgba(0, 0, 0, .7)
-          color: #0fc21b
-          margin: 0px 30px
-          text-align: center
-          padding: 5px 5px
-          right: 4%
+      &skin
+        position: absolute
+        top: 200px
+        right: 0
+        z-index: 0
+        height: 80%
+        img
+          right: -5%
+          margin: 0px auto
+          transform: scale(.85)
+      &pres
+        font-family: 'Minecraft'
+        font-size: 120%
+        background: rgba(0, 0, 0, .7)
+        color: #0fc21b
+        margin: 0px 30px
+        text-align: center
+        padding: 5px 5px
+        right: 4%
